WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287110
[iPad] Mail content on icloud.com has incorrect size after leaving app and reopening
https://bugs.webkit.org/show_bug.cgi?id=287110
Summary
[iPad] Mail content on icloud.com has incorrect size after leaving app and re...
Lily Spiniolas
Reported
2025-02-05 11:22:49 PST
On iPad, mail content width on icloud.com may shrink after closing Safari and reopening it. Refreshing the page fixes the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-02-05 11:40:52 PST
<
rdar://problem/131836301
>
Lily Spiniolas
Comment 2
2025-02-05 11:41:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40072
EWS
Comment 3
2025-02-05 18:49:58 PST
Committed
289904@main
(89ae3701d721): <
https://commits.webkit.org/289904@main
> Reviewed commits have been landed. Closing PR #40072 and removing active labels.
EWS
Comment 4
2025-02-10 10:58:37 PST
Committed
289651.73@safari-7621-branch
(ce03d30d16ff): <
https://commits.webkit.org/289651.73@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2550 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug