[iPad] Mail content on icloud.com has incorrect size after leaving app and reopening https://bugs.webkit.org/show_bug.cgi?id=287110 rdar://131836301

Reviewed by Wenson Hsieh and Abrar Rahman Protyasha.

On iPad, the icloud.com mail app may display the mail content with an incorrect
width after closing Safari and reopening it. This is caused by the window resize
events that fire during snapshotting after closing Safari, which puts the page
into a bad state. These changes extend the 'shouldSilenceWindowResizeEvents'
quirk to apply to the icloud.com mail app on iOS, preventing the site
from acting upon window resize events during snapshotting.

* Source/WebCore/page/Quirks.cpp:
(WebCore::handleICloudQuirks):
(WebCore::Quirks::determineRelevantQuirks):

Canonical link: https://commits.webkit.org/289904@main