Source/WebCore/page/LocalFrameView.cpp
@@ -3838,7 +3838,7 @@ void LocalFrameView::scheduleResizeEventIfNeeded()
 #endif
 
     RefPtr document = m_frame->document();
-    if (document->quirks().shouldSilenceWindowResizeEvents()) {
+    if (document->quirks().shouldSilenceWindowResizeEventsDuringApplicationSnapshotting()) {
         document->addConsoleMessage(MessageSource::Other, MessageLevel::Info, "Window resize events silenced due to: http://webkit.org/b/258597"_s);
         FRAMEVIEW_RELEASE_LOG(Events, "scheduleResizeEventIfNeeded: Not firing resize events because they are temporarily disabled for this page");
         return;
