Source/WebCore/page/QuirksData.h
@@ -102,6 +102,7 @@ struct WEBCORE_EXPORT QuirksData {
     bool shouldEnableApplicationCacheQuirk { false };
     bool shouldIgnoreAriaForFastPathContentObservationCheckQuirk { false };
     bool shouldNavigatorPluginsBeEmpty { false };
+    bool shouldSilenceWindowResizeEventsDuringApplicationSnapshotting { false };
     bool shouldSuppressAutocorrectionAndAutocapitalizationInHiddenEditableAreasQuirk { false };
     bool shouldSynthesizeTouchEventsAfterNonSyntheticClickQuirk { false };
     bool shouldTreatAddingMouseOutEventListenerAsContentChange { false };
@@ -115,7 +116,6 @@ struct WEBCORE_EXPORT QuirksData {
     bool allowLayeredFullscreenVideos { false };
     bool shouldSilenceMediaQueryListChangeEvents { false };
     bool shouldSilenceResizeObservers { false };
-    bool shouldSilenceWindowResizeEvents { false };
 #endif
 
 #if PLATFORM(VISION)
